Bug 169911 - FILESAVE: ODP -> PPTX exporting animations without a target
Summary: FILESAVE: ODP -> PPTX exporting animations without a target
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.8.0 target:26.2.0.2 target:...
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-09 14:58 UTC by Karthik
Modified: 2026-01-07 09:39 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
ODP File (2.05 MB, application/vnd.oasis.opendocument.presentation)
2025-12-09 14:59 UTC, Karthik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karthik 2025-12-09 14:58:14 UTC
Description:
Open the attached file and export it to PPTX, the resulting file can't be opened in PowerPoint.

LibreOffice skips export of empty/invalid OLE objects, but animations attaches to these OLE objects are exported.

officeotron error:
ERROR      - (slides/slide1.xml:2 col:5,145) cvc-minInclusive-valid: Value '-1' is not facet-valid with respect to minInclusive '0' for type 'ST_DrawingElementId'.
ERROR      - (slides/slide1.xml:2 col:5,145) cvc-attribute.3: The value '-1' of attribute 'spid' on element 'p:spTgt' is not valid with respect to its type, 'ST_DrawingElementId'.
---------

Here Shape ID `spid` is -1 because it's target OLE is not exported


Steps to Reproduce:
1.Open the attach ODP file
2.Export is as PPTX
3.Open the resulting file in PowerPoint

Actual Results:
PowerPoint fails to open the file

Expected Results:
PowerPoint opens the file without any problem


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: 520(Build:2)
CPU threads: 22; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Debian package version: 4:25.2.3-2+deb13u2
Calc: threaded
Comment 1 Karthik 2025-12-09 14:59:12 UTC
Created attachment 204530 [details]
ODP File
Comment 2 Commit Notification 2026-01-02 12:54:49 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d64f3e812bd6929b62d8c00b60b460aed2bf8e84

tdf#169911: ODP -> PPTX export invalid animations

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-01-02 18:30:23 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/c371757d0c5a418b9932a5a01389280ca41f3b8a

tdf#169911: ODP -> PPTX export invalid animations

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2026-01-06 09:24:34 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1bc761ea79f52201cfb8c8fbe0e74ff20840cb82

tdf#169911: sd_export_tests-ooxml4: Add test

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2026-01-07 09:39:14 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/6b5fbb953959beedc4ff3b0ea3de512559a6cfc5

tdf#169911: ODP -> PPTX export invalid animations

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.