tdf#169911: ODP -> PPTX export invalid animations

Empty/invalid OLE objects are skipped PPTX export, but animations
attached to these OLE objects are exported.

Add the slide itself as target for these animations

Change-Id: I1e594d607cc37f58c0e56357f8f8d42d9139bec8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195306
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
(cherry picked from commit 064e42a069c9186919086904ced3100960bafb41)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196156
Tested-by: Jenkins
(cherry picked from commit d64f3e812bd6929b62d8c00b60b460aed2bf8e84)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196425
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit c371757d0c5a418b9932a5a01389280ca41f3b8a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196431